--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@nomiclabs/hardhat-truffle5": "^2.0.6",
+    "@openzeppelin/contracts": "^4.7.2",
     "@superfluid-finance/ethereum-contracts": "^1.3.0",
     "@superfluid-finance/sdk-core": "^0.4.2"
   }
